# projeto_final_software_para_persistencia_de_dados

./: .gitignore  IMPLEMENTATION_COMPLETE.md  LICENSE  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  init_database.py  init_db_simple.py  pyproject.toml  requirements.txt  run_migrations.py  start_server.py
backend/alembic/: env.py
backend/alembic/versions/: 001_create_usuario.py  002_create_ponto_turistico.py  003_create_hospedagem.py  004_create_avaliacao.py  005_create_favorito.py
backend/scripts/: create_tables.sql  init-mongodb.js  init-postgres.sql
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py  accommodations.py  auth.py  comments.py  favorites.py  health.py  photos.py  ratings.py  spots.py
backend/src/config/: __init__.py  mongodb.py  postgres.py  redis.py  settings.py
backend/src/dependencies/: auth.py
backend/src/middleware/: error_handler.py  rate_limit.py
backend/src/models/: __init__.py  avaliacao.py  favorito.py  hospedagem.py  ponto_turistico.py  usuario.py
backend/src/repositories/: base.py  comment_repository.py  favorito_repository.py  hospedagem_repository.py  photo_repository.py  rating_repository.py  spot_repository.py  usuario_repository.py
backend/src/schemas/: auth.py  spot.py  validators.py
backend/src/services/: auth_service.py  comment_service.py  directions_service.py  favoritos_service.py  hospedagem_service.py  photo_service.py  rating_service.py  session_service.py  spot_service.py
backend/src/utils/: export.py  import_data.py  jwt.py  logging_config.py  security.py
docs/: api.md  deployment.md
(+29 files in other folders)
